--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,14 @@ title: Blog
 ---
 <h1>Latest Posts</h1>
 
+<p>
+{% highlight ruby linenos %}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}
+</p>
+
 <ul>
   {% for post in site.posts %}
     <li>
