--- a/blog.html
+++ b/blog.html
@@ -4,19 +4,13 @@ title: Blog
 ---
 <h1>Latest Posts</h1>
 
-<p>
-{% highlight ruby linenos %}
-def foo
-  puts 'foo'
-end
-{% endhighlight %}
-</p>
-
 <ul>
   {% for post in site.posts %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <p>{{ post.excerpt }}</p>
+      {{post.content}}
+      <!-- {{post.excerpt}} -->
+      <a href="{{post.url}}">more...</a>
     </li>
   {% endfor %}
 </ul>
